--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "storybook": "concurrently 'npm:watch:*'",
+    "watch:storybook": "storybook dev -p 6006",
+    "watch:tailwind": "npx tailwind -i ./app/globals-input.css -o ./app/globals.css --watch",
+    "build:tailwind": "npx tailwind -i ./app/globals-input.css -o ./app/globals.css",
+    "build-storybook": "npm run build:tailwind && storybook build"
   },
   "dependencies": {
+    "@storybook/client-api": "^7.6.17",
+    "css-loader": "^7.1.1",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.2",
+    "@storybook/addon-controls": "^8.0.8",
     "@storybook/addon-essentials": "^8.0.8",
     "@storybook/addon-interactions": "^8.0.8",
     "@storybook/addon-links": "^8.0.8",
@@ -29,12 +35,13 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
     "eslint-plugin-storybook": "^0.8.0",
-    "postcss": "^8",
+    "postcss": "^8.4.38",
     "storybook": "^8.0.8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
